Replace newsletter with contact block and fix mobile footer overflow

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -503,9 +503,6 @@ button {
   color: #ccc;
   padding: 6rem 0 2rem;
   margin-top: 5rem;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
 }
 
 .footer__content {
